--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,7 @@
 		    <version>0.10.5</version>
 		    <scope>runtime</scope>
 		</dependency>
-				
-		
-		
-	
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -66,6 +63,7 @@
 		   <artifactId>log4j-api</artifactId>
 		   <version>2.13.0</version>
 		 </dependency>
+
 		 <dependency>
 		   <groupId>org.apache.logging.log4j</groupId>
 		   <artifactId>log4j-core</artifactId>
@@ -88,7 +86,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -138,6 +135,17 @@
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 	</dependencies>
 
