--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
 		   <artifactId>log4j-core</artifactId>
 		   <version>2.13.0</version>
 		 </dependency>
-	
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
