--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,16 @@ springdoc.api-docs.path=/api-docs
 spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
 spring.jpa.properties.hibernate.search.default.indexBase=index
 spring.jpa.properties.hibernate.search.default.indexwriter.infostream=true
+
+#Application Insights (Monitoramento)
+# Specify the instrumentation key of your Application Insights resource.
+azure.application-insights.instrumentation-key=0239401f-ab73-45a5-bcd1-b68f15480283
+# Specify the name of your springboot application. This can be any logical name you would like to give to your app.
+spring.application.name=MeuProduto
+#Acesso azure:
+#usuario: meuprodutosenac@gmail.com
+#senha: senac123!@#
+
+#Envers
+spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+
