--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,13 @@
 	</repositories>
 
 	<dependencies>
-
+		<!--
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-spatial</artifactId>
+			<version>8.2.0</version>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
