Adição/Ajustes da imagem docker + Jenkinsfile
Signed-off-by: Romulo Rocha <rrocha@hpe.com>

--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/meuproduto?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://meuproduto.ci9l4jehmqz3.us-east-2.rds.amazonaws.com:3306/meuproduto?useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true
 spring.datasource.username=usermeuproduto
 spring.datasource.password=usermeuproduto
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
