--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #Ambiente
-spring.profiles.active=test
+spring.profiles.active=aws
+
+server.servlet.contextPath=/api
 
 #Timestamp JSON
 spring.jackson.serialization.write_dates_as_timestamps=false
