--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,71 +1,24 @@
 version: '3.3'
 
 services:
-#  meuproduto-mysql:
-#    image: mysql:8
-#    deploy:
-#      replicas: 1
-#      restart_policy:
-#        condition: on-failure
-#    volumes:
-#      - db_data:/var/lib/mysql
-#    environment:
-#      MYSQL_DATABASE: meuproduto
-#      MYSQL_ROOT_PASSWORD: rootpass
-#      MYSQL_USER: usermeuproduto
-#      MYSQL_PASSWORD: usermeuproduto
-#    healthcheck:
-#      test: ["CMD-SHELL", 'mysqladmin ping']
-#      interval: 10s
-#      timeout: 2s
-#      retries: 10
-#    ports:
-#      - "3306:3306"
-#    expose:
-#      - "3306"
-#    networks:
-#      - net-meuproduto-backend
-#
-#  phpmyadmin:
-#    image: phpmyadmin/phpmyadmin
-#    deploy:
-#      replicas: 1
-#      restart_policy:
-#        condition: on-failure
-#    depends_on:
-#      - meuproduto-mysql
-#    networks:
-#      - net-meuproduto-backend
-#    ports:
-#      - 88:80
-#    environment:
-#      PMA_HOST: meuproduto-mysql
-#      PMA_PORT: 3306
-#      PMA_ARBITRARY: 1
-
   meuproduto-backend:
+    image: rderoci/meuproduto
     #build:
     #  context: .
     #  dockerfile: Dockerfile
-    image: rderoci/meuproduto
+    container_name: meuproduto-backend
     deploy:
-      replicas: 1
+      replicas: 3
       restart_policy:
         condition: on-failure
-    depends_on:
-      - meuproduto-mysql
-    networks:
-      - net-meuproduto-backend
-    ports:
-      - 8888:8080
-    expose:
-      - "8888"
+      placement:
+        constraints: [node.role == worker]
     environment:
-      DATABASE_HOST: meuproduto-mysql
-      DATABASE_NAME: meuproduto
-      DATABASE_USER: usermeuproduto
-      DATABASE_PASSWORD: usermeuproduto
-      DATABASE_PORT: 3306
+      - SPRING_PROFILES_ACTIVE=aws
+    networks:
+      - net-meuproduto
+    ports:
+      - 8080:8080
 
 networks:
-  net-meuproduto-backend:
+  net-meuproduto:
