adicionado tomcat e catalina logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.profiles.active=aws
 
 server.servlet.contextPath=/api
 
+logging.level.org.apache.tomcat=DEBUG
+logging.level.org.apache.catalina=DEBUG
+
 #Timestamp JSON
 spring.jackson.serialization.write_dates_as_timestamps=false
 
